Add Meta tags (#38)
* Added metadata tags to pages

* Added general desc

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -2,6 +2,20 @@
 {% block title %}
 Catalog - TunnelVision
 {% endblock %}
+{% block metadata %}
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://tunnelvision.csh.rit.edu/catalog" />
+<meta property="og:title" content="Catalog - TunnelVision" />
+<meta property="og:description" content="TunnelVision is an interactive catalog of the mural under RIT's Residence Halls." />
+<meta property="og:image" content="{{ url_for('static', filename='images/favicon.png') }}" />
+<meta name="twitter:card" content="summary">
+<meta name="twitter:domain" value="tunnelvision.csh.rit.edu" />
+<meta name="twitter:title" value="Catalog - TunnelVision" />
+<meta name="twitter:description" value="TunnelVision is an interactive catalog of the mural under RIT's Residence Halls." />
+<meta name="twitter:image" content="{{ url_for('static', filename='images/favicon.png') }}" />
+<meta name="twitter:url" value="https://tunnelvision.csh.rit.edu/catalog" />
+<meta name="description" value="TunnelVision is an interactive catalog of the mural under RIT's Residence Halls." />
+{% endblock %}
 {% block dynamic_content %}
 
 <div class="container text-center">
