Open Cavas page text and basic structure

--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -4,9 +4,112 @@ Open Canvas - TunnelVision
 {% endblock %}
 {% block dynamic_content %}
 
-<div class="container text-center">
-    <h1>The Open Canvas</h1>
+<div class="container">
+    <h1 style="text-decoration: underline;">The Open Canvas</h1>
     <h2>by the House of the Arts and Tunnel Visionaries</h2>
+    <a href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
+        I have feedback or have found inappropriate media on this space
+    </a>
 
+    <h3>What is this space?</h3>
+    <p>
+        This is the Open Canvas, a mural space created by House of the Arts and
+        Tunnel Visionaries. Here, we aim to give you a canvas to have creative
+        freedom and share your thoughts and art as students. As time passes and
+        more art accumulates, this mural will develop an identity and voice that
+        represents the diverse backgrounds, thoughts, and creative voices of
+        every individual on campus.
+    </p>
+    <p>
+        The Open Canvas is dedicated to fostering the art and expression of
+        every RIT student and developing a diverse artistic voice. This space is
+        maintained by the efforts of Tunnel Visionaries, House of the Arts, and
+        the Center for Residence Life to support this goal.
+    </p>
+
+    <h3>How can I add to this space?</h3>
+    <p>
+        Simply grab some water-based acrylic paint and start working, no forms
+        needed! Permanent markers are also permitted, but due to the tendency of
+        alcohol-based ink to dissolve paints, they are highly discouraged.
+        Please look below for the guidelines and rules! Note that this space is
+        cyclic, and art will be added over other art as it evolves. Every so
+        often, it will be painted solid white as a clean slate - but not before
+        it gets covered and develops its own voice!
+    </p>
+
+    <h3>Guidelines</h3>
+    <p><ul>
+        <li>Hate speech of any kind is prohibited</li>
+        <li>Vulgar or explicit imagery of any kind is prohibited</li>
+        <li>Offensive profanity is prohibited</li>
+        <li>Advertisement or promotion of student or commercial organizations is
+            prohibited</li>
+        <li>Political or social commentary is limited to that which fosters
+            inclusivity and diversity of people and their art</li>
+    </ul></p>
+    <p>
+        Speech found in violation of these guidelines or found to be
+        inappropriate by the Center for Residence Life will be removed.
+    </p>
+    <p>
+        <a href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
+            I have feedback or have found inappropriate media on this space
+        </a>
+    </p>
+    <p>
+        This space is cyclic! Your art will be covered in time as new art is
+        added.
+    </p>
+    <p>
+        Please use only water-based paints and acrylics on this space.
+        Do not use:
+        <ul>
+            <li>Aerosols</li>
+            <li>Volatile organic compounds (mineral spirits, alcohol/permanent
+                markers, etc)</li>
+            <li>Etching or scratching tools</li>
+            <li>Adhesives</li>
+            <li>Non-water-based paints or inks</li>
+        </ul>
+    </p>
+
+    <!--
+        Gallery
+        Here is a gallery of photos taken of the Open Canvas as it evolves! Photos are taken at the discretion of House of the Arts and Tunnel Visionaries, and before any time the mural is returned to a blank slate.
+        [TIMELAPSE]
+
+        This timelapse, maintained by Tunnel Visionaries, shows the growth of this mural as students share their thoughts, art, and soul on this wall. As it progresses, the students here at RIT will be able to demonstrate their experiences, thoughts, and the abstract side of what it means to be here, and to be human.
+    -->
+
+    <h3>What are House of the Arts and Tunnel Visionaries?</h3>
+    <p>
+        House of the Arts is a special interest house on campus, and is the
+        combined art-focused group from the previous Art House and Photo House.
+        It aims to facilitate art of all forms, and develop a safe, connected
+        group of artistically driven people.
+    </p>
+    <p>
+        Tunnel Visionaries is a club focused on appreciating the many murals
+        found in the tunnel systems of RIT and advocating for their
+        preservation, as well as the many murals found around the Rochester
+        region. Combining art and history, we maintain the TunnelVision catalog
+        website.
+    </p>
+    <p><a href="">
+        Join the House of the Arts discord!
+    </a></p>
+    <p><a href="">
+        Join the Tunnel Visionaries discord!
+    </a></p>
+
+    <h3>How long will this last?</h3>
+    <p>
+        This project is currently in a pilot phase. As time goes on, if this is
+        successful we aim to improve and expand this mural, and integrate it as
+        a permanent hallmark of the RIT tunnels. In this endeavor, it is
+        important for all users to respect this space, so that it can continue
+        to be the most interesting landmark of the tunnels!
+    </p>
 </div>
 {% endblock %}
