Convert FAQ section to accordions

--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -82,34 +82,71 @@ Open Canvas - TunnelVision
         This timelapse, maintained by Tunnel Visionaries, shows the growth of this mural as students share their thoughts, art, and soul on this wall. As it progresses, the students here at RIT will be able to demonstrate their experiences, thoughts, and the abstract side of what it means to be here, and to be human.
     -->
 
-    <h3>What are House of the Arts and Tunnel Visionaries?</h3>
-    <p>
-        House of the Arts is a special interest house on campus, and is the
-        combined art-focused group from the previous Art House and Photo House.
-        It aims to facilitate art of all forms, and develop a safe, connected
-        group of artistically driven people.
-    </p>
-    <p>
-        Tunnel Visionaries is a club focused on appreciating the many murals
-        found in the tunnel systems of RIT and advocating for their
-        preservation, as well as the many murals found around the Rochester
-        region. Combining art and history, we maintain the TunnelVision catalog
-        website.
-    </p>
-    <p><a href="">
-        Join the House of the Arts discord!
-    </a></p>
-    <p><a href="">
-        Join the Tunnel Visionaries discord!
-    </a></p>
+    <h3>Frequently Asked Questions</h3>
+    <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+            <h4 class="accordion-header"><button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseOne"
+                aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseOne"
+            >
+                What are House of the Arts and Tunnel Visionaries?
+            </button></h4>
+            <div
+                id="panelsStayOpen-collapseOne"
+                class="accordion-collapse collapse"
+            ><div class="accordion-body">
+                <p>
+                    House of the Arts is a special interest house on campus, and
+                    is the combined art-focused group from the previous Art
+                    House and Photo House. It aims to facilitate art of all
+                    forms, and develop a safe, connected group of artistically
+                    driven people.
+                </p>
+                <p>
+                    Tunnel Visionaries is a club focused on appreciating the
+                    many murals found in the tunnel systems of RIT and
+                    advocating for their preservation, as well as the many
+                    murals found around the Rochester region. Combining art and
+                    history, we maintain the TunnelVision catalog website.
+                </p>
+                <p><a href="">
+                    Join the House of the Arts discord!
+                </a></p>
+                <p><a href="">
+                    Join the Tunnel Visionaries discord!
+                </a></p>
+            </div></div>
+        </div>
+        <div class="accordion-item">
+            <h4 class="accordion-header"><button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseTwo"
+                aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseTwo"
+            >
+                How long will this last?
+            </button></h4>
+            <div
+                id="panelsStayOpen-collapseTwo"
+                class="accordion-collapse collapse"
+            ><div class="accordion-body">
+            <p>
+                This project is currently in a pilot phase. As time goes on, if
+                this is successful we aim to improve and expand this mural, and
+                integrate it as a permanent hallmark of the RIT tunnels. In this
+                endeavor, it is important for all users to respect this space,
+                so that it can continue to be the most interesting landmark of
+                the tunnels!
+            </p>
+            </div></div>
+        </div>
+    </div>
 
-    <h3>How long will this last?</h3>
-    <p>
-        This project is currently in a pilot phase. As time goes on, if this is
-        successful we aim to improve and expand this mural, and integrate it as
-        a permanent hallmark of the RIT tunnels. In this endeavor, it is
-        important for all users to respect this space, so that it can continue
-        to be the most interesting landmark of the tunnels!
-    </p>
 </div>
 {% endblock %}
