--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -6,9 +6,9 @@ Open Canvas - TunnelVision
 
 <div class="container">
     <h1 style="text-decoration: underline;">The Open Canvas</h1>
-    <h2>by the House of the Arts and Tunnel Visionaries</h2>
+    <h2>by House of the Arts and Tunnel Visionaries</h2>
     <a href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
-        I have feedback or have found inappropriate media on this space
+        Have feedback? Want to report a problem?
     </a>
 
     <h3>What is this space?</h3>
