--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -4,11 +4,36 @@ Open Canvas - TunnelVision
 {% endblock %}
 {% block dynamic_content %}
 
+<style>
+.banner-text {
+    position: relative;
+    left: 0;
+    transform: none;
+}
+
+.banner-value {
+    background: rgba(247, 105, 2, 0.6);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.banner-value-alt {
+    background: rgba(0, 0, 0, 0.8);
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px 0
+}
+</style>
+
 <div class="container">
-    <h1 style="text-decoration: underline;">The Open Canvas</h1>
-    <h2>by House of the Arts and Tunnel Visionaries</h2>
-    <a href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
-        Have feedback? Want to report a problem?
+    <div class="banner-value">
+    <h1 class="banner-text" style="text-decoration: underline;">The Open Canvas</h1>
+    <h2 class="banner-text">by House of the Arts and Tunnel Visionaries</h2>
+    </div>
+    <a style="text-decoration: none;" href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
+    <div class="banner-value-alt">
+    <h5 class="banner-text">Have feedback? Want to report a problem?</h5>
+    </div>
     </a>
 
     <h3>What is this space?</h3>
@@ -38,7 +63,10 @@ Open Canvas - TunnelVision
         it gets covered and develops its own voice!
     </p>
 
-    <h3>Guidelines</h3>
+    <div style="max-width: 75%; margin: 0 auto">
+    <div class="banner-value">
+    <h3 class="banner-text">Guidelines</h3>
+    </div>
     <p><ul>
         <li>Hate speech of any kind is prohibited</li>
         <li>Vulgar or explicit imagery of any kind is prohibited</li>
@@ -52,11 +80,13 @@ Open Canvas - TunnelVision
         Speech found in violation of these guidelines or found to be
         inappropriate by the Center for Residence Life will be removed.
     </p>
-    <p>
-        <a href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
-            I have feedback or have found inappropriate media on this space
-        </a>
-    </p>
+    <a style="text-decoration: none;" href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
+    <div class="banner-value-alt">
+    <h5 class="banner-text">
+        I have feedback or have found inappropriate media on this space
+    </h5>
+    </div>
+    </a>
     <p>
         This space is cyclic! Your art will be covered in time as new art is
         added.
@@ -73,6 +103,7 @@ Open Canvas - TunnelVision
             <li>Non-water-based paints or inks</li>
         </ul>
     </p>
+    </div>
 
     <!--
         Gallery
