--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -27,13 +27,15 @@ Open Canvas - TunnelVision
 
 <div class="container">
     <div class="banner-value">
-    <h1 class="banner-text" style="text-decoration: underline;">The Open Canvas</h1>
-    <h2 class="banner-text">by House of the Arts and Tunnel Visionaries</h2>
+        <h1 class="banner-text" style="text-decoration: underline;">
+            The Open Canvas
+        </h1>
+        <h2 class="banner-text">by House of the Arts and Tunnel Visionaries</h2>
     </div>
     <a style="text-decoration: none;" href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
-    <div class="banner-value-alt">
-    <h5 class="banner-text">Have feedback? Want to report a problem?</h5>
-    </div>
+        <div class="banner-value-alt"><h5 class="banner-text">
+            Have feedback? Want to report a problem?
+        </h5></div>
     </a>
 
     <h3>What is this space?</h3>
@@ -64,45 +66,41 @@ Open Canvas - TunnelVision
     </p>
 
     <div style="max-width: 75%; margin: 0 auto">
-    <div class="banner-value">
-    <h3 class="banner-text">Guidelines</h3>
-    </div>
-    <p><ul>
-        <li>Hate speech of any kind is prohibited</li>
-        <li>Vulgar or explicit imagery of any kind is prohibited</li>
-        <li>Offensive profanity is prohibited</li>
-        <li>Advertisement or promotion of student or commercial organizations is
-            prohibited</li>
-        <li>Political or social commentary is limited to that which fosters
-            inclusivity and diversity of people and their art</li>
-    </ul></p>
-    <p>
-        Speech found in violation of these guidelines or found to be
-        inappropriate by the Center for Residence Life will be removed.
-    </p>
-    <a style="text-decoration: none;" href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
-    <div class="banner-value-alt">
-    <h5 class="banner-text">
-        I have feedback or have found inappropriate media on this space
-    </h5>
-    </div>
-    </a>
-    <p>
-        This space is cyclic! Your art will be covered in time as new art is
-        added.
-    </p>
-    <p>
-        Please use only water-based paints and acrylics on this space.
-        Do not use:
-        <ul>
-            <li>Aerosols</li>
-            <li>Volatile organic compounds (mineral spirits, alcohol/permanent
-                markers, etc)</li>
-            <li>Etching or scratching tools</li>
-            <li>Adhesives</li>
-            <li>Non-water-based paints or inks</li>
-        </ul>
-    </p>
+        <div class="banner-value"><h3 class="banner-text">Guidelines</h3></div>
+        <p><ul>
+            <li>Hate speech of any kind is prohibited</li>
+            <li>Vulgar or explicit imagery of any kind is prohibited</li>
+            <li>Offensive profanity is prohibited</li>
+            <li>Advertisement or promotion of student or commercial organizations is
+                prohibited</li>
+            <li>Political or social commentary is limited to that which fosters
+                inclusivity and diversity of people and their art</li>
+        </ul></p>
+        <p>
+            Speech found in violation of these guidelines or found to be
+            inappropriate by the Center for Residence Life will be removed.
+        </p>
+        <a style="text-decoration: none;" href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
+            <div class="banner-value-alt"><h5 class="banner-text">
+                I have feedback or have found inappropriate media on this space
+            </h5></div>
+        </a>
+        <p>
+            This space is cyclic! Your art will be covered in time as new art is
+            added.
+        </p>
+        <p>
+            Please use only water-based paints and acrylics on this space.
+            Do not use:
+            <ul>
+                <li>Aerosols</li>
+                <li>Volatile organic compounds (mineral spirits,
+                    alcohol/permanent markers, etc)</li>
+                <li>Etching or scratching tools</li>
+                <li>Adhesives</li>
+                <li>Non-water-based paints or inks</li>
+            </ul>
+        </p>
     </div>
 
     <!--
