Add highlight image to top of page

--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -26,11 +26,20 @@ Open Canvas - TunnelVision
 </style>
 
 <div class="container">
-    <div class="banner-value">
-        <h1 class="banner-text" style="text-decoration: underline;">
-            The Open Canvas
-        </h1>
-        <h2 class="banner-text">by House of the Arts and Tunnel Visionaries</h2>
+    <div>
+        <img
+            alt="{{ canvasHighlight['alttext'] }}"
+            src="{{ canvasHighlight['imgurl'] }}"
+            style="width: 100%; height: 10lh; object-fit: cover"
+        >
+        <div class="banner-value">
+            <h1 class="banner-text" style="text-decoration: underline;">
+                The Open Canvas
+            </h1>
+            <h2 class="banner-text">
+                by House of the Arts and Tunnel Visionaries
+            </h2>
+        </div>
     </div>
     <a style="text-decoration: none;" href="https://forms.gle/ZpNDyLpMT4gAv6kCA">
         <div class="banner-value-alt"><h5 class="banner-text">
