Add slight padding to bottom of page

--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -121,7 +121,7 @@ Open Canvas - TunnelVision
     -->
 
     <h3>Frequently Asked Questions</h3>
-    <div class="accordion" id="accordionPanelsStayOpenExample">
+    <div class="accordion" id="accordionPanelsStayOpenExample" style="margin-bottom: 3rlh">
         <div class="accordion-item">
             <h4 class="accordion-header"><button
                 class="accordion-button collapsed"
