Neaten FAQ HTML

--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -120,20 +120,20 @@ Open Canvas - TunnelVision
     -->
 
     <h3>Frequently Asked Questions</h3>
-    <div class="accordion" id="accordionPanelsStayOpenExample" style="margin-bottom: 3rlh">
+    <div class="accordion" id="faq" style="margin-bottom: 3rlh">
         <div class="accordion-item">
             <h4 class="accordion-header"><button
                 class="accordion-button collapsed"
                 type="button"
                 data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapseOne"
+                data-bs-target="#faq-collapse1"
                 aria-expanded="false"
-                aria-controls="panelsStayOpen-collapseOne"
+                aria-controls="faq-collapse1"
             >
                 What are House of the Arts and Tunnel Visionaries?
             </button></h4>
             <div
-                id="panelsStayOpen-collapseOne"
+                id="faq-collapse1"
                 class="accordion-collapse collapse"
             ><div class="accordion-body">
                 <p>
@@ -163,24 +163,24 @@ Open Canvas - TunnelVision
                 class="accordion-button collapsed"
                 type="button"
                 data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapseTwo"
+                data-bs-target="#faq-collapse2"
                 aria-expanded="false"
-                aria-controls="panelsStayOpen-collapseTwo"
+                aria-controls="faq-collapse2"
             >
                 How long will this last?
             </button></h4>
             <div
-                id="panelsStayOpen-collapseTwo"
+                id="faq-collapse2"
                 class="accordion-collapse collapse"
             ><div class="accordion-body">
-            <p>
-                This project is currently in a pilot phase. As time goes on, if
-                this is successful we aim to improve and expand this mural, and
-                integrate it as a permanent hallmark of the RIT tunnels. In this
-                endeavor, it is important for all users to respect this space,
-                so that it can continue to be the most interesting landmark of
-                the tunnels!
-            </p>
+                <p>
+                    This project is currently in a pilot phase. As time goes on,
+                    if this is successful we aim to improve and expand this
+                    mural, and integrate it as a permanent hallmark of the RIT
+                    tunnels. In this endeavor, it is important for all users to
+                    respect this space, so that it can continue to be the most
+                    interesting landmark of the tunnels!
+                </p>
             </div></div>
         </div>
     </div>
