Add Open Canvas location to FAQ

--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -183,6 +183,32 @@ Open Canvas - TunnelVision
                 </p>
             </div></div>
         </div>
+        <div class="accordion-item">
+            <h4 class="accordion-header"><button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#faq-collapse3"
+                aria-expanded="false"
+                aria-controls="faq-collapse3"
+            >
+                Where is the Open Cavas?
+            </button></h4>
+            <div
+                id="faq-collapse3"
+                class="accordion-collapse collapse"
+            ><div class="accordion-body">
+                <p>
+                    The current location of the Open Canvas is in the tunnels
+                    underneath Baker Hall, just passed curved tunnel to Grace
+                    Watson Hall (coming from Kate Gleason Hall).
+                </p>
+                <img
+                    alt="A map of the tunnels showing the location of the Open Canvas"
+                    src="{{ url_for('static', filename='images/open_canvas_location.png') }}"
+                >
+            </div></div>
+        </div>
     </div>
 
 </div>
