Add Discord links to Open Canvas page

--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -150,10 +150,10 @@ Open Canvas - TunnelVision
                     murals found around the Rochester region. Combining art and
                     history, we maintain the TunnelVision catalog website.
                 </p>
-                <p><a href="">
+                <p><a href="https://discord.gg/eupd4yyJrB">
                     Join the House of the Arts discord!
                 </a></p>
-                <p><a href="">
+                <p><a href="https://discord.gg/39WN2fUDfE">
                     Join the Tunnel Visionaries discord!
                 </a></p>
             </div></div>
