Updated TunnelVisionaries language

--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -161,8 +161,10 @@ Open Canvas - TunnelVision
                     Tunnel Visionaries is a club focused on appreciating the
                     many murals found in the tunnel systems of RIT and
                     advocating for their preservation, as well as the many
-                    murals found around the Rochester region. Combining art and
-                    history, we maintain the TunnelVision catalog website.
+                    murals found around the Rochester region. Combining its art
+                    and history focus, it also maintains the <a href="/">TunnelVision</a> website,
+                    a digital catalog of all the murals under the Residence Hall
+                    tunnels at RIT.
                 </p>
                 <p><a href="https://discord.gg/eupd4yyJrB">
                     Join the House of the Arts discord!
