Revise some FAQ language

--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -83,9 +83,9 @@ Open Canvas - TunnelVision
         needed! Permanent markers are also permitted, but due to the tendency of
         alcohol-based ink to dissolve paints, they are highly discouraged.
         Please look below for the guidelines and rules! Note that this space is
-        cyclic, and art will be added over other art as it evolves. Every so
-        often, it will be painted solid white as a clean slate - but not before
-        it gets covered and develops its own voice!
+        cyclic, and art will be added over other art as it evolves. Every so often
+        it will be painted white to start with a clean slate, but only once it
+        gets covered in art and develops its own voice!
     </p>
 
     <div class="banner-value"><h3 class="banner-text">Guidelines</h3></div>
