--- a/templates/open-canvas.html
+++ b/templates/open-canvas.html
@@ -208,7 +208,7 @@ Open Canvas - TunnelVision
                 aria-expanded="false"
                 aria-controls="faq-collapse3"
             >
-                Where is the Open Cavas?
+                Where is the Open Canvas?
             </button></h4>
             <div
                 id="faq-collapse3"
